--- a/Beginner.ipynb
+++ b/Beginner.ipynb
@@ -433,6 +433,198 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. 시퀀스 자료형 활용하기\n",
+    "\n",
+    "리스트 튜플 range 문자열의 공통정은 모두 값이 연속적으로 이어져 있다는 점이다.\n",
+    "\n",
+    "이러한 자료형을 시퀀스 자료형이라고 부른다.\n",
+    "\n",
+    "시퀀스 자료형의 가장 큰 특징은 공통 동작과 기능을 제공한다는 점이다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "특정 값이 있는지 확인하기\n",
+    "\n",
+    "값 in 시퀀스객체 -> Bool 값으로 반환해줌"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[10,20,30,40,50,60,70,80,90]\n",
+    "30 in a # True\n",
+    "100 in a # False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "특정 값이 없는지 확인하기\n",
+    "\n",
+    "값 not in 시퀀스 객체 -> Bool 값으로 반환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[0,10,20,30,40,50,60,70,80,90]\n",
+    "100 not in a # True 100이 a에 없으니까 True값을 반환\n",
+    "10 not in a # False 10이 a에 있으니까 False 값 반환\n",
+    "43 in (38,76,43,62,19) # True\n",
+    "1 in range(10) # True\n",
+    "'P' in 'hello, Python' # True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "시퀀스객체 반복하기\n",
+    "\n",
+    "1. 시퀀스객체 * 정수\n",
+    "2. 정수 * 시퀀스객체\n",
+    "\n",
+    "유일하게 range() 객체는 + 연산자 또는 * 연산자로 더하고 반복할 수 없다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 10, 20, 30, 0, 10, 20, 30, 0, 10, 20, 30]\n",
+      "(10, 20, 30, 40, 50, 10, 20, 30, 40, 50, 10, 20, 30, 40, 50)\n",
+      "[0, 10, 20, 30, 40, 50, 60, 0, 10, 20, 30, 40, 50, 60, 0, 10, 20, 30, 40, 50, 60]\n",
+      "Hello, Hello, Hello, \n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'range' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\hyssk\\youse0ng\\my_weakness_Python\\python_study\\Beginner.ipynb Cell 32\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/hyssk/youse0ng/my_weakness_Python/python_study/Beginner.ipynb#X43sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m3\u001b[39m\u001b[39m*\u001b[39m[\u001b[39m0\u001b[39m,\u001b[39m10\u001b[39m,\u001b[39m20\u001b[39m,\u001b[39m30\u001b[39m,\u001b[39m40\u001b[39m,\u001b[39m50\u001b[39m,\u001b[39m60\u001b[39m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/hyssk/youse0ng/my_weakness_Python/python_study/Beginner.ipynb#X43sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m3\u001b[39m\u001b[39m*\u001b[39m\u001b[39m'\u001b[39m\u001b[39mHello, \u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/hyssk/youse0ng/my_weakness_Python/python_study/Beginner.ipynb#X43sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m,\u001b[39m5\u001b[39m,\u001b[39m2\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m3\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'range' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "print([0,10,20,30]*3)\n",
+    "print((10,20,30,40,50)*3)\n",
+    "print(3*[0,10,20,30,40,50,60])\n",
+    "print(3*'Hello, ')\n",
+    "print(range(0,5,2)*3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "시퀀스 자료형 중에서 튜플, range, 문자열은 읽기 전용이다.\n",
+    "\n",
+    "item assignment (값 할당)을 지원하지 않는다.\n",
+    "\n",
+    "1. tuple 객체는 값 할당을 지원하지 않는다.\n",
+    "2. range() 객체는 값 할당을 지원하지 않는다.\n",
+    "3. 문자열 객체는 값 할당을 지원하지 않는다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'range' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\hyssk\\youse0ng\\my_weakness_Python\\python_study\\Beginner.ipynb Cell 34\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/hyssk/youse0ng/my_weakness_Python/python_study/Beginner.ipynb#X44sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m a\u001b[39m=\u001b[39m\u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/hyssk/youse0ng/my_weakness_Python/python_study/Beginner.ipynb#X44sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m a[\u001b[39m1\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'range' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "a=range(10)\n",
+    "a[1]=3 \n",
+    "# 값 할당이 안되는 모습이 보인다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\hyssk\\youse0ng\\my_weakness_Python\\python_study\\Beginner.ipynb Cell 35\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/hyssk/youse0ng/my_weakness_Python/python_study/Beginner.ipynb#X50sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m a\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mHello, \u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/hyssk/youse0ng/my_weakness_Python/python_study/Beginner.ipynb#X50sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m a[\u001b[39m0\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mL\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "a='Hello, '\n",
+    "a[0]='L'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "리스트와 튜플을 배우고 있다.\n",
+    "\n",
+    "del 요소로 삭제하기"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
