나의 파이썬 약점 바로잡기

--- a/Beginner.ipynb
+++ b/Beginner.ipynb
@@ -619,9 +619,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "리스트와 튜플을 배우고 있다.\n",
+    "리스트와 튜플을 배우고 있는 중입니다.\n",
     "\n",
-    "del 요소로 삭제하기"
+    "del로 요소 삭제하기\n",
+    "\n",
+    "del 시퀀스객체[인덱스]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 100, 23]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[10,30,20,100,23]\n",
+    "del a[1]\n",
+    "a # a[1]인 30이 사라졌다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "슬라이스 사용하기 개인적으로 이 부분은 많은 이해가 필요하다고 생각된다.\n",
+    "\n",
+    "슬라이스 : 시퀀스객체의 일부를 잘라낸다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "시퀀스객체[시작인덱스:끝인덱스]\n",
+    "시작 인덱스부터 끝 인덱스 -1 까지 가져온다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 10, 20, 30]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[0,10,20,30,40,50,60,70,80,90]\n",
+    "a[0:4]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "리스트의 중간 부분 가져오기 (슬라이싱)"
    ]
   },
   {
@@ -629,7 +698,196 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a=[0,10,20,30,40,50,60,70,80,90]\n",
+    "a[4:7]\n",
+    "# [40,50,60] index=[4,5,6]번이 출력됨\n",
+    "a[4:-1]\n",
+    "# [40,50,60,70,80]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "인덱스 증가폭 사용하기 (슬라이싱)\n",
+    "\n",
+    "시퀀스객체[시작인덱스:끝인덱스:인덱스증가폭]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 30, 50, 70, 90]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[0,10,20,30,40,50,60,70,80,90]\n",
+    "a[1:len(a):2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "인덱스 생략하기\n",
+    "\n",
+    "슬라이스를 사용할 때 시작인덱스와 끝인덱스를 생략할 수 있다.\n",
+    "\n",
+    "인덱스를 생략하는 방법은 시퀀스 객체의 길이를 몰라도 되기 때문에 자주 쓰이는 방식이다.\n",
+    "\n",
+    "a[:7]과 같이 시작인덱스를 생략하면 리스트의 처음부터 끝 인덱스 -1(인덱스 6)까지 가져올 수 있다.\n",
+    "a[3:]과 같이 끝인덱스를 생략하면 리스트의 시작인덱스부터 원소 끝까지 가져올 수 있다.\n",
+    "a[:] 리스트의 전체를 가져옴\n",
+    "\n",
+    "시퀀스객체[:끝인덱스]\n",
+    "\n",
+    "시퀀스객체[시작인덱스:]\n",
+    "\n",
+    "시퀀스객체[:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[40, 50, 60, 70, 80, 90]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[0,10,20,30,40,50,60,70,80,90]\n",
+    "a[:4]\n",
+    "a[4:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "인덱스를 생략하면서 증가폭 사용하기\n",
+    "\n",
+    "시작 인덱스 또는 끝 인덱스를 생략하면서 인덱스 증가폭을 지정해보자\n",
+    "\n",
+    "1. 시퀀스객체[:끝인덱스:인덱스증가폭]\n",
+    "\n",
+    "a[:7:2]과 같이, 시작 인덱스를 생략한다면, 리스트의 처음부터 인덱스 6(7-1)번까지 2씩 띄어서 가져옴\n",
+    "\n",
+    "2. 시퀀스객체[시작인덱스::인덱스증가폭]\n",
+    "\n",
+    "a[7::2]과 같이, 끝 인덱스를 생략하면, 리스트의 7번째 인덱스부터 리스트의 마지막 요소까지 2씩 증가하면서 가져온다.\n",
+    "\n",
+    "3. 시퀀스객체[::인덱스증가폭]\n",
+    "a[::2]와 같이, 시작과 끝인덱스를 생략하면, 처음부터 끝까지 인덱스 증가폭만큼 리스트를 반환해냄\n",
+    "\n",
+    "4. 시퀀스객체[시작인덱스:끝인덱스:-음수인덱스증가폭]\n",
+    "인덱스 증가폭을 음수로 지정하면 뒤에서부터 가져올 수 있다. 단, 시작인덱스가 끝 인덱스보다 커야한다.\n",
+    "a[5:1:-1]와 같이 지정하면, 5부터 2까지 인덱스를 -1하면서 뒤에서부터 출력해냄\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[50, 40, 30, 20]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[5:1:-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "슬라이스에 요소 할당하기\n",
+    "\n",
+    "리스트의 인덱스에 접근하여 요소에 값을 할당할 수 있었다.\n",
+    "\n",
+    "마찬가지로 슬라이스로 범위를 지정하고, 여러 요소에 값을 할당할 수 있다.\n",
+    "\n",
+    "시퀀스객체[시작인덱스:끝인덱스]=시퀀스객체"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 'a', 'b', 'c', 60, 70, 80, 90]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[10,20,30,40,50,60,70,80,90]\n",
+    "a[2:5]=['a','b','c']\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "del로 슬라이스 삭제하기\n",
+    "\n",
+    "del 시퀀스객체[시작인덱스:끝인덱스]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 10, 50, 60, 70, 80, 90]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[0,10,20,30,40,50,60,70,80,90]\n",
+    "del a[2:5]\n",
+    "a"
+   ]
   }
  ],
  "metadata": {
