나의 파이썬 약점 보완기

--- a/Beginner.ipynb
+++ b/Beginner.ipynb
@@ -888,6 +888,191 @@
     "del a[2:5]\n",
     "a"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. 딕셔너리 사용하기\n",
+    "\n",
+    "키에 자료형은 리스트와 딕셔너리를 제외한 문자열,정수,실수,불 자료형을 사용할 수 있다.\n",
+    "\n",
+    "값에 자료형은 리스트, 딕셔너리 등을 포함한 모든 자료형을 사용할 수 있다.\n",
+    "\n",
+    "딕셔너리={키:값} \n",
+    "딕셔너리={} \n",
+    "딕셔너리=dict()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dict로 딕셔너리 만들기\n",
+    "\n",
+    "1. 딕셔너리 = dict(키1=값1,키2=값2)\n",
+    "2. 딕셔너리 = dict([(키1, 값1),(키2, 값2)])\n",
+    "3. 딕셔너리 = dict(zip([키1,키2],[값1, 값2]))\n",
+    "4. 딕셔너리 = dict({키1:값1, 키2:값2})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'health': 490, 'mana': 334, 'melee': 550, 'armor': 18.72}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1.\n",
+    "lux1= dict(health=490, mana=334, melee=550, armor=18.72)\n",
+    "lux1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'health': 490, 'mana': 334, 'melee': 550, 'armor': 18.72}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2. \n",
+    "lux2 = dict([('health',490),('mana',334),('melee',550),('armor',18.72)])\n",
+    "lux2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('health', 490), ('mana', 334), ('melee', 550), ('armor', 18.72)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'health': 490, 'mana': 334, 'melee': 550, 'armor': 18.72}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3.\n",
+    "lux3 = dict(zip(['health','mana','melee','armor'],[490,334,550,18.72]))\n",
+    "print(list(zip(['health','mana','melee','armor'],[490,334,550,18.72])))\n",
+    "lux3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'health': 490, 'mana': 334, 'melee': 550, 'armor': 18.72}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4. \n",
+    "lux4 = dict({'health': 490,'mana':334,'melee':550,'armor':18.72})\n",
+    "lux4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "딕셔너리에 키가 있는지 없는지 확인하기\n",
+    "\n",
+    "키 in 딕셔너리 : 키가 딕셔너리에 있는가?\n",
+    "\n",
+    "키 not in 딕셔너리: 키가 딕셔너리에 없는가?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lux={'health':490,'mana':334,'melee':550,'armor':18.72}\n",
+    "'health' in lux # True\n",
+    "'health' not in lux # False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "딕셔너리의 키 개수 구하기\n",
+    "\n",
+    "len(딕셔너리)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lux)"
+   ]
   }
  ],
  "metadata": {
