Colaboratory를 통해 생성됨

--- a/Advanced.ipynb
+++ b/Advanced.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM7Skn8lr26urD+kHNhfSc8",
+      "authorship_tag": "ABX9TyOOrDV1ikNsNdpbFOG4jRqI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -830,26 +830,39 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# 예외 처리 사용하기\n",
+        "\n",
+        "예외란 코드를 실행하는 중에 발생한 에러를 뜻한다.\n",
+        "\n",
+        "예외란 ZeroDivisionError, AttributeError, NameError, TypeError 등 다양한 에러들도 모두 예외이다.\n",
+        "\n",
+        "예외가 발생하여도 스크립트 실행을 중단하지 않고 계속 실행하게 해주는 예외 처리 방법에 대해 알아보자."
+      ],
       "metadata": {
         "id": "ezxJcC39hbAW"
-      },
-      "execution_count": null,
-      "outputs": []
+      }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## try except 사용하기\n",
+        "\n",
+        "예외 처리를 하려면 다음과 같이 try에 실행할 코드를 넣고 except에 예외가 발생했을 때 처리하는 코드를 넣는다."
+      ],
       "metadata": {
         "id": "OVxgd5Vtha7w"
-      },
-      "execution_count": null,
-      "outputs": []
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "try:\n",
+        "  '실행할 코드'\n",
+        "except:\n",
+        "  '예외가 발생했을 때 처리하는 코드'"
+      ],
       "metadata": {
         "id": "yg2tzuN8ha4i"
       },
@@ -858,7 +871,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "try:\n",
+        "  x=int(input('나눌 숫자를 입력하시오.'))\n",
+        "  y=10/x\n",
+        "  print(y)\n",
+        "except: # 예외가 발생했을 때 실행됨\n",
+        "  print('예외가 발생했습니다.')"
+      ],
       "metadata": {
         "id": "FJ5C5WpSha1Y"
       },
@@ -866,19 +886,45 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## 특정 예외만 처리하기\n",
+        "\n",
+        "except에 예외 이름을 지정해서 특정 예외가 발생했을 때만 처리 코드를 실행하도록 만들기\n"
+      ],
       "metadata": {
         "id": "nlegd1y_haxw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  '실행할 코드'\n",
+        "except 예외이름:\n",
+        "  '예외가 발생했을 때 처리하는 코드'"
+      ],
+      "metadata": {
+        "id": "HA3Jhbu9hatI"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "y=[10,20,30]\n",
+        "\n",
+        "try:\n",
+        "  index,x=map(int,input('인덱스와 나눌 숫자를 입력하시오.').split())\n",
+        "  print(y[index]/x)\n",
+        "except ZeroDivisionError: # 숫자를 0으로 나누었을 때 발생하는 에러\n",
+        "  print('숫자를 0으로 나눌 수 없습니다.')\n",
+        "except IndexError: # 인덱스 범위를 벗어났을 때 발생되는 에러\n",
+        "  print('잘못된 인덱스입니다.')"
+      ],
       "metadata": {
-        "id": "HA3Jhbu9hatI"
+        "id": "xAlytjaBvqnZ"
       },
       "execution_count": null,
       "outputs": []
