--- a/intermediate.ipynb
+++ b/intermediate.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMaTOECNj2ZF/we/2Bmq/Cj",
+      "authorship_tag": "ABX9TyMgNdBFDBN7ClmNFBbVkZy3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3499,10 +3499,592 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 클래스 속성과 정적, 클래스 메소드 사용하기\n",
+        "\n",
+        "이번엔 클래스에 속해 있는 클래스 속성에 대해 알아보기\n",
+        "\n",
+        "그리고 인스턴스를 만들지 않고 클래스로 호출하는 정적 메소드와 클래스 메소드도 사용해보기.\n",
+        "\n",
+        "클래스 속성과 인스턴스 속성 알아보기\n",
+        "\n",
+        "사실 속성에는 2가지가 있다.\n",
+        "\n",
+        "클래스 속성과 인스턴스 속성인데 `__init__` 메소드에서 만들었던 속성은 인스턴스 속성이다."
+      ],
+      "metadata": {
+        "id": "w1THt91m45tg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 클래스 속성 사용하기\n",
+        "\n",
+        "이번에는 클래스 속성을 사용하기 클래스 속성은 다음과 같이 클래스에 바로 속성을 만든다.\n"
+      ],
+      "metadata": {
+        "id": "LGWYn8QH7Fu7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class 클래스이름:\n",
+        "  속성=값"
+      ],
+      "metadata": {
+        "id": "Aoy3Bq1N7bDG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Person:\n",
+        "  bag=[]\n",
+        "\n",
+        "  def put_bag(self,stuff):\n",
+        "    self.bag.append(stuff)\n",
+        "\n",
+        "james=Person()\n",
+        "james.put_bag('책')\n",
+        "\n",
+        "maria=Person()\n",
+        "maria.put_bag('열쇠')\n",
+        "\n",
+        "print(james.bag)\n",
+        "print(maria.bag)"
+      ],
+      "metadata": {
+        "id": "dHMeKJim7bBB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "james와 maria 인스턴스를 만들고 각자 put_bag 메소드로 물건을 넣었는데 출력해보면 물건이 합쳐져서 나온다.\n",
+        "\n",
+        "즉, 클래스 속성은 클래스에 속해 있으며 모든 인스턴스에서 공유된다.\n",
+        "\n",
+        "그리고 put_bag 메소드에서 클래스 속성 bag에 접근할 때 self를 사용했다. 근데 self는 현재 인스턴스를 뜻하므로 클래스 속성을 참조하기에는 조금 모호하다..\n",
+        "\n",
+        "그래서 클래스 속성에 접근할 때는 다음과 같이 클래스 이름으로 접근하면 코드가 명확해진다.\n",
+        "\n",
+        "* 클래스.속성"
+      ],
+      "metadata": {
+        "id": "_dPfFLrL7a-_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Person:\n",
+        "  bag=[]\n",
+        "\n",
+        "  def put_bag(self,stuff):\n",
+        "    Person.bag.append(stuff) # 클래스 이름으로 클래스 속성에 접근"
+      ],
+      "metadata": {
+        "id": "uHr1aGTJ7a9P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "마찬가지로 클래스 바깥에서도 다음과 같이 클래스 이름으로 클래스 속성에 접근하면된다."
+      ],
+      "metadata": {
+        "id": "kvGl7Xe67a66"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 속성,메소드 이름을 찾는 순서\n",
+        "\n",
+        "속성, 메소드 이름을 찾을 때 인스턴스, 클래스 순으로 찾는다.\n",
+        "\n",
+        "인스턴스 속성이 없으면 클래스 속성을 찾게되므로\n",
+        "\n",
+        "james.bag, maria.bag도 문제없이 동작한다.\n",
+        "\n",
+        "인스턴스와 클래스에서 `__dict__` 속성을 출력해보면 현재 인스턴스와 클래스의 속성을 딕셔너리로 확인할 수 있다.\n",
+        "\n",
+        "* `인스턴스.__dict__`\n",
+        "* `클래스.__dict__`"
+      ],
+      "metadata": {
+        "id": "TksriMMQ7a5N"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(james.__dict__)\n",
+        "print(Person.__dict__)"
+      ],
+      "metadata": {
+        "id": "RlxxHpRF7a3X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 인스턴스 속성 사용하기\n",
+        "\n",
+        "가방을 여러 사람이 공유하지 않으려면 어떻게 해야할까?\n",
+        "\n",
+        "bag를 인스턴스 속성으로 만들면된다.\n",
+        "\n",
+        "인스턴스 속성은 인스턴스별로 독립되어 있으며 서로 영향을 주지 않는다."
+      ],
+      "metadata": {
+        "id": "7kcNDXuZ7ase"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Person:\n",
+        "  def __init__(self):\n",
+        "    self.bag=[]\n",
+        "\n",
+        "  def put_bag(self,stuff):\n",
+        "    self.bag.append(stuff)\n",
+        "\n",
+        "james=Person()\n",
+        "james.put_bag('책')\n",
+        "\n",
+        "maria=Person()\n",
+        "maria.put_bag('열쇠')\n",
+        "\n",
+        "print(james.bag)\n",
+        "print(maria.bag)"
+      ],
+      "metadata": {
+        "id": "HkuqoSd97aqb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* 클래스 속성: 모든 인스턴스가 공유. 인스턴스 전체가 사용해야 하는 값을 저장할 때 사용\n",
+        "* 인스턴스 속성: 인스턴스별로 독립되어 있다. 각 인스턴스가 값을 따로 저장해야 할 때 사용"
+      ],
+      "metadata": {
+        "id": "nSv35C6f7ah2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 비공개 클래스 속성 사용하기\n",
+        "\n",
+        "클래스 속성도 비공개 속성을 만들 수 있다. `__속성`과 같이 밑줄 두개로 시작하면 비공개 속성이 된다. 따라사 클래스 안에서만 접근할 수 있고, 클래스 바깥에서는 접근할 수 없다.\n",
+        "\n",
+        "즉, 클래스에서 공개하고 싶지 않은 속성이 있다면 비공개 클래스를 사용해야 한다.\n",
+        "\n",
+        "예를 들어, 기사 게임 캐릭터는 아이템을 최대 10개까지만 보유할 수 있다고 하자."
+      ],
+      "metadata": {
+        "id": "isU9mtY77agD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Knight:\n",
+        "  __item_limit=10 # 비공개 클래스 속성\n",
+        "\n",
+        "  def print_item_limit(self):\n",
+        "    print(Knight.__item_limit)\n",
+        "\n",
+        "x=Knight()\n",
+        "x.print_item_limit()\n",
+        "\n",
+        "print(Knight.__item_limit) # 클래스 바깥에서는 접근할 수 없음"
+      ],
+      "metadata": {
+        "id": "IlpmpD5nK5ec"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 정적 메소드 사용하기\n",
+        "\n",
+        "클래스의 메소드를 사용할 때 인스턴스를 통해서 호출했다.\n",
+        "\n",
+        "이번에는 인스턴스를 통하지 않고 클래스에서 바로 호출할 수 있는 정적 메소드와 클래스 메소드에 대해 알아보자\n",
+        "\n",
+        "먼저 정적 메소드는 다음과 같이 메소드 위에 @staticmethod 붙입니다.\n",
+        "\n",
+        "이때 정적 메소드는 매개 변수에 self를 지정하지 않는다."
+      ],
+      "metadata": {
+        "id": "GsO67Gvl7adK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class 클래스이름:\n",
+        "  @staticmethod\n",
+        "  def 메소드(매개변수1,매개변수2):\n",
+        "    '코드'"
+      ],
+      "metadata": {
+        "id": "zpiz1xoh7aW7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Calc:\n",
+        "  @staticmethod\n",
+        "  def add(a,b):\n",
+        "    print(a+b)\n",
+        "\n",
+        "  @staticmethod\n",
+        "  def mul(a,b):\n",
+        "    print(a*b)\n",
+        "\n",
+        "\n",
+        "Calc.add(10,20) # 클래스에서 바로 메소드 호출\n",
+        "Calc.mul(10,20) # 클래스에서 바로 메소드 호출"
+      ],
+      "metadata": {
+        "id": "2x-zqUBT7aTy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "@staticmethod 처럼 앞에 @이 붙은 것을 데코레이터라고 하며 메소드에 추가 기능을 구현할 때 사용합니다.\n",
+        "\n",
+        "Calc클래스에서 @staticmethod를 붙여서 add 메소드와 mul 메소드를 만들었습니다.\n",
+        "\n",
+        "정적 메소드를 호출할 때는 다음과 같이 클래스에서 바로 메소드를 호출하면 된다.\n",
+        "\n",
+        "* 클래스.메소드()"
+      ],
+      "metadata": {
+        "id": "J7cw3oKRPata"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "무엇을 정적메소드로 만들어야 할지 고민입니다..\n",
+        "\n",
+        "정적 메소드는 메소드의 실행이 외부 상태에 영향을 끼치지않는 순수 함수를 만들때 사용합니다.\n",
+        "\n",
+        "즉, 정적 메소드는 인스터늣의 상태를 변화시키지 않는 메소드를 만들 때 사용합니다."
+      ],
+      "metadata": {
+        "id": "proW6Oz67aNt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 클래스 메소드 사용하기\n",
+        "\n",
+        "클래스 메소드는 다음과 같이 메소드 위에 @classmethod를 붙입니다.\n",
+        "\n",
+        "이때, 클래스 메소드의 첫 매개변수는 cls로 지정해야한다 self가 아니라"
+      ],
+      "metadata": {
+        "id": "9jai38LkTB6Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class 클래스이름:\n",
+        "  @classmethod\n",
+        "  def 메소드(cls, 매개변수1, 매개변수2):\n",
+        "    \"코드\""
+      ],
+      "metadata": {
+        "id": "dc6sf0mtUXBs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "사람 클래스 Person을 만들고 인스턴스가 몇 개 만들어졌는지 출력하는 메소드를 만들어보자."
+      ],
+      "metadata": {
+        "id": "E_Ubj9WJUc9Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Person:\n",
+        "  count=0 # 클래스 속성\n",
+        "\n",
+        "  def __init__(self):\n",
+        "    Person.count+=1 # 인스턴스가 만들어질 때 클래스 속성 count에 1을 더함\n",
+        "\n",
+        "  @classmethod\n",
+        "  def print_count(cls):\n",
+        "    print('{0}명 생성되었습니다.'.format(cls.count)) # cls로 클래스 속성(count)에 접근\n",
+        "\n",
+        "james=Person()\n",
+        "maria=Person()\n",
+        "\n",
+        "Person.print_count()"
+      ],
+      "metadata": {
+        "id": "nAXj3ns9UzPS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# break, continue로 반복문 제어하기\n",
+        "\n",
+        "break는 for와 while 문법에서 제어 흐름을 벗어나기 위해 사용한다.\n",
+        "\n",
+        "즉, 루프를 완전히 중단하기 위해 사용\n",
+        "\n",
+        "continue는 break와 비슷하지만 다른점이 있다.\n",
+        "\n",
+        "break는 제어 흐름을 중단하고 빠져나오지만,\n",
+        "\n",
+        "continue는 제어 흐름을 유지한 상태에서 해당 코드의 실행만 건너 뛰는 역할을 한다\n",
+        "\n",
+        "* continue: 제어 흐름 유지, 코드 실행만 건너 뜀\n",
+        "* break: 제어 흐름 중단"
+      ],
+      "metadata": {
+        "id": "UG4i18u0WBKp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## break로 반복문 끝내기"
+      ],
+      "metadata": {
+        "id": "j6dK0aPoWBI1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### while에서 break로 반복문 끝내기"
+      ],
+      "metadata": {
+        "id": "5jWZ3xUlWBFC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "i=0\n",
+        "while True:\n",
+        "  print(i)\n",
+        "  i += 1\n",
+        "  if i == 100:\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "E7QUmjTOOr5s"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(100):\n",
+        "  print(i)\n",
+        "  if i == 50:\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "aR9qscAZOr3z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## continue로 코드 실행 건너 뛰기"
+      ],
+      "metadata": {
+        "id": "haAGYe-LOr14"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### for에서 continue로 코드 실행 건너뛰기"
+      ],
+      "metadata": {
+        "id": "zTAr9pCOOrz9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(100):\n",
+        "  if i % 2 == 0:\n",
+        "    continue\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "tkcVAyjSOryM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### while 반복문에서 continue로 코드 실행 건너 뛰기"
+      ],
+      "metadata": {
+        "id": "vLA9m-lrOrwQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "i = 0\n",
+        "while i < 100:\n",
+        "  i += 1\n",
+        "  if i % 2 == 0:\n",
+        "    continue\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "DCfVd5UtOruY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 입력한 횟수대로 반복하기"
+      ],
+      "metadata": {
+        "id": "9POolEBaOrsM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "count = int(input('반복할 횟수를 입력하시오. '))\n",
+        "\n",
+        "i = 0\n",
+        "while True:\n",
+        "  print(i)\n",
+        "  i  += 1\n",
+        "  if count == i:\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "E1ZXi-p-OrqV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 입력한 숫자까지 홀수 출력하기\n",
+        "\n",
+        "입력한 숫자까지 해당하는 홀수를 출력하기"
+      ],
+      "metadata": {
+        "id": "PoZdV31UOroh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "count = int(input(\"반복할 횟수를 사용하시오.: \"))\n",
+        "\n",
+        "for i in range(count+1):\n",
+        "  if i % 2 == 0:\n",
+        "    continue\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "M6LpY_rlOrma"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "w1THt91m45tg"
+        "id": "z1lmpwN6Orki"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vx2A02rpOriu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4LyacBdqOrgo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1QrcPqy1Ordx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "muZGom8yOrbk"
       },
       "execution_count": null,
       "outputs": []
