Colaboratory를 통해 생성됨

--- a/Advanced.ipynb
+++ b/Advanced.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMwWF5EurAAJClaqN8JJxLM",
+      "authorship_tag": "ABX9TyN1ZRJu6CWwHdzEtJPpyH0W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1795,6 +1794,337 @@
       ],
       "metadata": {
         "id": "Yc_tgvZ4Qjeo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 제너레이터 사용하기\n",
+        "\n",
+        "제너레이터는 이터레이터를 생성하는 함수입니다.\n",
+        "\n",
+        "이터레이터는 클래스에 `__iter__`,`__next__` 또는 `__getitem__` 메소드를 구현해야 하지만 제너레이터는 함수 안에서 yield라는 키워드만 사용하면 끝이다.\n",
+        "\n",
+        "제너레이터는 발생자라고 부릅니다."
+      ],
+      "metadata": {
+        "id": "GkJwnzqv5uAM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 제너레이터와 yield 알아보기\n",
+        "\n",
+        "* yield 값\n",
+        "\n",
+        "함수 안에서 yield를 사용하면 함수는 제너레이터가 되며 yield에는 값을 지정합니다."
+      ],
+      "metadata": {
+        "id": "tl-G88mz7Hs4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def number_generator():\n",
+        "  yield 0\n",
+        "  yield 1\n",
+        "  yield 2\n",
+        "\n",
+        "for i in number_generator():\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "Pf-RovO07fFE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 제너레이터 객체가 이터레이터인지 확인하기\n",
+        "\n",
+        "number_generator() 함수로 만든 객체가 정말 이터레이터인지 확인해보자\n",
+        "\n",
+        "dir함수로 메소드 목록을 확인해보자."
+      ],
+      "metadata": {
+        "id": "Ev13v_8Z7gWY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g=number_generator()\n",
+        "print(g)\n",
+        "dir(g)"
+      ],
+      "metadata": {
+        "id": "y-sFcbCT7gUi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "number_generator 함수를 호출하면 제너레이터 객체가 반환된다.\n",
+        "\n",
+        "이 객체를 dir 함수로 살펴보면 `__iter__`,`__next__` 메소드가 들어있다.\n",
+        "\n",
+        "`__next__`를 호출하면 0,1,2 나오다가 StopIteration 예외가 발생합니다."
+      ],
+      "metadata": {
+        "id": "0Had-xY87gSY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=g.__next__()\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "x-UfYuhy7gQk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "yield만 사용해서 iterator를 간단하게 구현할 수 있다.\n",
+        "\n",
+        "단, 이터레이터는 `__next__`메소드 안에서 직접 return으로 값을 반환했지만 제너레이터는 yield에 지정한 값이 `__next__` 메소드의 반환값으로 나온다.\n",
+        "\n",
+        "또한 이터레이터는 raise로 StopIteration을 예외를 직접 발생시켰지만, 제너레이터는 함수의 끝까지 도달하면 StopIteration이 자동으로 발생한다.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "21SgFHgp7gOW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### for와 제너레이터\n",
+        "\n",
+        "for 반복문은 반복할 때마다 `__next__`를 호출하므로 yield에서 발생시킨 값을 가져온다."
+      ],
+      "metadata": {
+        "id": "wx9iAPLQ7gMM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "제너레이터 객체에서 `__iter__`를 호출하면 self를 반환하므로 (`__iter__(self) return self`) 같은 객체가 나온다.\n",
+        "\n",
+        "제너레이터 함수 호출 -> 제너레이터 객체 -> `__iter__`는 self를 반환 -> 제너레이터 객체"
+      ],
+      "metadata": {
+        "id": "ZPB5gYAv7gKK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "yield를 사용하면 값을 함수 바깥으로 전달하면서 코드 실행을 함수 바깥에 양보합니다.\n",
+        "\n",
+        "따라서 yield는 현재 함수를 잠시 중단하고 함수 바깥의 코드가 실행되도록 만든다.\n"
+      ],
+      "metadata": {
+        "id": "p1XjYWKW7gIr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### yield의 동작 과정 알아보기\n",
+        "\n",
+        "514p를 참고하지만, 가장 중요하다고 생각하는건\n",
+        "\n",
+        "다른 함수들은 일반적으로 return으로 함수값을 객체에 전달하면 그 즉시 함수는 끝나게 되지만 yield를 사용하면 yield로 만들어진 값을 바깥 코드에 실행해준다.\n",
+        "\n",
+        "즉, 함수내부의 yield 값을 바깥코드에 전달하며, 바깥 코드의 실행을 양보하면서 함수가 진행된다."
+      ],
+      "metadata": {
+        "id": "bBqa6MYW7gGO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 제너레이터 만들기\n",
+        "\n",
+        "range()처럼 작동하는 제너레이터 만들기"
+      ],
+      "metadata": {
+        "id": "m3dav2EC7fRp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def number_generator(stop):\n",
+        "  n=0\n",
+        "  while True:\n",
+        "    if n >= stop:\n",
+        "      break\n",
+        "    yield n\n",
+        "    n+=1\n",
+        "\n",
+        "for i in number_generator(3):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "SfDcLMHD7fOC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### yield에서 함수 호출하기\n",
+        "\n",
+        "리스트에 있는 문자열을 대문자로 변환하여 함수 바깥으로 전달하기"
+      ],
+      "metadata": {
+        "id": "9OP_Tow8KRRS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def upper_generator(x):\n",
+        "  for i in x:\n",
+        "    yield i.upper()\n",
+        "\n",
+        "fruits=['apple','banana','pear','pineapple','orange','grape']\n",
+        "for k in upper_generator(fruits):\n",
+        "  print(k)"
+      ],
+      "metadata": {
+        "id": "kVoOnNPvKRMm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "yield i.upper()와 같이 yield에서 메소드를 호출하면 해당 함수의 반환값이 바깥으로 전달한다.\n",
+        "\n",
+        "upper는 호출했을 때 대문자로 문자열을 반환하므로 yield는 이 문자열을 바깥으로 전달한다.\n",
+        "\n",
+        "즉, yield에 무엇을 지정하든 결과값만 바깥으로 전달한다.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "wHTX9rE8LNwf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## yield from으로 값을 여러 번 바깥으로 전달하기\n",
+        "\n",
+        " yield로 값을 한 번씩 바깥으로 전달했다.\n",
+        "\n",
+        " 그래서 이번에는 값을 여러 번 바깥으로 전달할 때는 for 또는 while문으로 반복하면서 yield를 사용하였다.\n",
+        "\n",
+        "리스트의 1,2,3을 바깥으로 전달한다."
+      ],
+      "metadata": {
+        "id": "e5Q239bpLpmU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def number_generator():\n",
+        "  x=[1,2,3]\n",
+        "  for i in x:\n",
+        "    yield i\n",
+        "\n",
+        "for i in number_generator():\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "Fas3mbT5LpjS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "이런 경우에는 반복문을 사용하지 않고, yield from을 사용하면 된다.\n",
+        "\n",
+        "* yield from 반복가능한객체\n",
+        "* yield from 이터레이터\n",
+        "* yield from 제너레이터객체"
+      ],
+      "metadata": {
+        "id": "i12fluQYMZcW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def number_generator():\n",
+        "  x=[1,2,3]\n",
+        "  yield from x\n",
+        "\n",
+        "for i in number_generator():\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "amAJ3fKVMmRQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### yield from에 제너레이터 객체 지정"
+      ],
+      "metadata": {
+        "id": "3CvmC0yOM6vu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def number_generator(stop):\n",
+        "  n=0\n",
+        "  while n < stop:\n",
+        "    yield n\n",
+        "    n+=1\n",
+        "\n",
+        "def three_generator():\n",
+        "  yield from number_generator(3)\n",
+        "\n",
+        "for i in three_generator():\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "Qo7OKdf6NATR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "제너레이터는 개인적으로 너무어렵당.."
+      ],
+      "metadata": {
+        "id": "mi88Hko4NT6-"
       }
     }
   ]
