Colaboratory를 통해 생성됨

--- a/반복문_보완.ipynb
+++ b/반복문_보완.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNVM5SjzfHPlyvTR/R3lXJh",
+      "authorship_tag": "ABX9TyNYiiL7sW7LabdXf4vw9tEh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -202,12 +202,91 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "중첩 루프"
+        "# 중첩 루프"
       ],
       "metadata": {
         "id": "LDcFp-kXwXkP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 사각형 별 출력하기"
+      ],
+      "metadata": {
+        "id": "y4OB0u8dY-Q0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  for j in range(5):\n",
+        "    print('*',end='')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "id": "QdsO9IHBZFHG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 계단식으로 별 출력하기"
+      ],
+      "metadata": {
+        "id": "cp8H836mZTz6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  for j in range(i+1):\n",
+        "    print('*',end='')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "id": "dI2jfPy0ZwHr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 대각선으로 별 출력하기"
+      ],
+      "metadata": {
+        "id": "APiaYt1Ye25-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  for j in range(0,i+1):\n",
+        "    if j<i:\n",
+        "      print(\" \",end='')\n",
+        "    if j==i:\n",
+        "      print(\"*\",end='')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "id": "ancH8J-6e5Eh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ljxbmpDGflMu"
       },
       "execution_count": null,
       "outputs": []
