Colaboratory를 통해 생성됨

--- a/반복문_보완.ipynb
+++ b/반복문_보완.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNYiiL7sW7LabdXf4vw9tEh",
+      "authorship_tag": "ABX9TyMGVuz/+YOhtgwcFWWeLMlr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -259,7 +259,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 대각선으로 별 출력하기"
+        "## 대각선으로 별 출력하기 연습문제"
       ],
       "metadata": {
         "id": "APiaYt1Ye25-"
@@ -283,10 +283,67 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 역삼각형 모양으로 별 출력하기 연습문제"
+      ],
+      "metadata": {
+        "id": "ljxbmpDGflMu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  for j in range(5):\n",
+        "    if j >= i:\n",
+        "      print(\"*\",end='')\n",
+        "    else:\n",
+        "      print(\" \",end='')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "id": "A5Y_e4uG2HP4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 산 모양으로 별 출력하기\n",
+        "\n",
+        "가운데 선을 잘라서 생각해서 문제를 푸는 것으로 접근"
+      ],
+      "metadata": {
+        "id": "kktbK7ou97wB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(3):\n",
+        "  for j in reversed(range(3)):\n",
+        "    if i < j:\n",
+        "      print(' ',end='')\n",
+        "    else:\n",
+        "      print(\"*\",end='')\n",
+        "  for j in range(3):\n",
+        "    if i>j:\n",
+        "      print('*',end='')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "id": "_rnSSpaY5MwX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ljxbmpDGflMu"
+        "id": "j8JkFm-c96w2"
       },
       "execution_count": null,
       "outputs": []
