Colaboratory를 통해 생성됨

--- a/예외처리_이터레이터.ipynb
+++ b/예외처리_이터레이터.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNPIZ7bzDNw+FkhmFOh+B+V",
+      "authorship_tag": "ABX9TyOiqdIf2nmXNDRPisApD6e2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -193,6 +193,32 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# assert로 예외 발생시키기\n",
+        "\n",
+        "* assert 조건식 (, 예외메시지)\n",
+        "\n",
+        "assert의 조건식이 거짓일 때, AssertionError를 발생시키고, assert의 조건식이 참이면 그냥 넘어간다."
+      ],
+      "metadata": {
+        "id": "jOk82zgd31EG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = int(input(\"x값: \"))\n",
+        "assert x <= 80, '80을 초과하는 수입니다.'\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "7pwrjDHS4N_d"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# 연습문제: 파일 예외 처리하기\n",
         "maria.txt 파일이 있으면 파일의 내용을 읽어서 출력하고, 파일이 없다면 '파일이 없습니다'를 출력\n",
         "\n",
@@ -346,19 +372,201 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# 이터레이터 만들기\n",
+        "\n",
+        "`__iter__`와 `__next__` 메소드를 구현해서 이터레이터를 만들어야한다.\n",
+        "(range)처럼 동작하는 이터레이터를 만들자."
+      ],
       "metadata": {
-        "id": "yASrIGVu1wnz"
+        "id": "sQiPsXWJ9EDl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class 이터레이터이름:\n",
+        "  def __init__(self):\n",
+        "    pass\n",
+        "  def __next__(self):\n",
+        "    pass"
+      ],
+      "metadata": {
+        "id": "N4fSQCZB9QA1"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class Counter:\n",
+        "  def __init__(self,stop):\n",
+        "    self.stop=stop\n",
+        "    self.current=0\n",
+        "\n",
+        "  def __iter__(self):\n",
+        "    return self\n",
+        "\n",
+        "  def __next__(self):\n",
+        "    if self.current < self.stop:\n",
+        "      r = self.current\n",
+        "      self.current += 1\n",
+        "      return r\n",
+        "    else:\n",
+        "      raise StopIteration\n",
+        "\n",
+        "for i in Counter(3):\n",
+        "  print(i)"
+      ],
       "metadata": {
-        "id": "1MgJvQD05Jn_"
+        "id": "2MCjBnpu9P5t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 인덱스로 접근할 수 있는 이터레이터 (`__getitem__`)\n",
+        "\n",
+        "인덱스를 매개변수로 받음"
+      ],
+      "metadata": {
+        "id": "6eFDh4omB8dU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Counter:\n",
+        "  def __init__(self,stop):\n",
+        "    self.stop=stop\n",
+        "\n",
+        "  def __getitem__(self,index): # 인덱스를 받음\n",
+        "    if index < self.stop: # 인덱스가 반복을 끝낼 숫자보다 작을 때\n",
+        "      return index # 인덱스를 반환\n",
+        "    else: #인덱스가 반복을 끝낼 숫자보다 크거나 같을 때\n",
+        "      raise IndexError # 인덱스 범위 밖은 예외 발생\n",
+        "\n",
+        "print(Counter(3)[0],Counter(3)[1],Counter(3)[2])"
+      ],
+      "metadata": {
+        "id": "3yAoeUu3BhVV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 연습 문제: 배수 이터레이터 만들기\n",
+        "\n",
+        "특정 수의 배수를 만드는 이터레이터\n",
+        "\n",
+        "배수는 0부터 지정된 숫자보다 작을 때까지 만듦"
+      ],
+      "metadata": {
+        "id": "SimRhjfIDYKc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MultipleIterator:\n",
+        "  def __init__(self,stop,multiple):\n",
+        "    self.stop = stop\n",
+        "    self.multiple = multiple\n",
+        "    self.current = 1\n",
+        "\n",
+        "  def __iter__(self):\n",
+        "    return self\n",
+        "\n",
+        "  def __next__(self):\n",
+        "    if self.current * self.multiple < self.stop: # if 조건문(self.current * self.multiple) < self.stop: -> 3 * 1  <  20: True\n",
+        "      r = self.current * self.multiple\n",
+        "      self.current += 1\n",
+        "      return r\n",
+        "    else:\n",
+        "      raise StopIteration"
+      ],
+      "metadata": {
+        "id": "N7TRZkkBDHdj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in MultipleIterator(20,3):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "NEsMrOWGJYcA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for j in MultipleIterator(30,5):\n",
+        "  print(j)"
+      ],
+      "metadata": {
+        "id": "uSYkG5beJeym"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for k in MultipleIterator(35,4):\n",
+        "  print(k)"
+      ],
+      "metadata": {
+        "id": "wWIh_x3TJ9O2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 심사문제: 시간 이터레이터 만들기\n",
+        "\n",
+        "표준 입력으로 정수 세 개가 입력된다.\n",
+        "\n",
+        "(첫 번째 정수는 시작하는 초, 두 번째 저수는 반복을 끝낼 초, 세 번째 정수는 인덱스이며 입력되는 초의 범위는 [0,100000], 입력되는 인덱스의 범위 [0,10])"
+      ],
+      "metadata": {
+        "id": "0LEpM_PPKJAD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class TimeIterator:\n",
+        "  def __init__(self,start,stop,index):\n",
+        "    self.start=start\n",
+        "    self.stop=stop\n",
+        "    self.index=index\n",
+        "\n",
+        "  def __getitem__(self,index):\n",
+        "    if self.index < self.stop:\n",
+        "\n",
+        "start, stop, index = map(int,input().split())\n",
+        "\n",
+        "for i in TimeIterator(start,stop):\n",
+        "  print(i)\n",
+        "\n",
+        "print('\\n',TimeIterator(start,stop)[index], sep='')"
+      ],
+      "metadata": {
+        "id": "6XI5vRREKknL"
       },
       "execution_count": null,
       "outputs": []
