--- a/예외처리_이터레이터.ipynb
+++ b/예외처리_이터레이터.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOiqdIf2nmXNDRPisApD6e2",
+      "authorship_tag": "ABX9TyMlAcbgb0tLvfD6HKVR/WRk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -540,7 +540,7 @@
         "\n",
         "표준 입력으로 정수 세 개가 입력된다.\n",
         "\n",
-        "(첫 번째 정수는 시작하는 초, 두 번째 저수는 반복을 끝낼 초, 세 번째 정수는 인덱스이며 입력되는 초의 범위는 [0,100000], 입력되는 인덱스의 범위 [0,10])"
+        "(첫 번째 정수는 시작하는 초, 두 번째 정수는 반복을 끝낼 초, 세 번째 정수는 인덱스이며 입력되는 초의 범위는 [0,100000], 입력되는 인덱스의 범위 [0,10])"
       ],
       "metadata": {
         "id": "0LEpM_PPKJAD"
@@ -550,23 +550,38 @@
       "cell_type": "code",
       "source": [
         "class TimeIterator:\n",
-        "  def __init__(self,start,stop,index):\n",
+        "  def __init__(self,start,stop):\n",
         "    self.start=start\n",
         "    self.stop=stop\n",
-        "    self.index=index\n",
         "\n",
         "  def __getitem__(self,index):\n",
-        "    if self.index < self.stop:\n",
-        "\n",
+        "    if index < self.stop - self.start: # 인덱스가 범위 내에 있을 때 (0 4)\n",
+        "      second = (self.start + index) % 60 # 입력할 때 0 4 1 중 1이 index로 들어오는 것이 아니다. selp.stop - self.start의 범위가 index로 들어오는것같다.\n",
+        "      minute = (self.start + index) // 60 % 60\n",
+        "      hour = (self.start + index) // 60 // 60 % 24\n",
+        "      return '{0:02d}:{1:02d}:{2:02d}'.format(hour,minute,second)\n",
+        "    else:\n",
+        "      raise IndexError\n",
         "start, stop, index = map(int,input().split())\n",
         "\n",
         "for i in TimeIterator(start,stop):\n",
         "  print(i)\n",
         "\n",
-        "print('\\n',TimeIterator(start,stop)[index], sep='')"
+        "print('\\n',TimeIterator(start,stop)[index],sep='')"
       ],
       "metadata": {
         "id": "6XI5vRREKknL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(88234//60) % 60"
+      ],
+      "metadata": {
+        "id": "fNPNbWKOM1X5"
       },
       "execution_count": null,
       "outputs": []
